[gd_scene load_steps=9 format=2]

[ext_resource path="res://GUI/LifeBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://GUI/ProtectionBar.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/gui/componente3.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/componente1.png" type="Texture" id=4]
[ext_resource path="res://assets/item/vacuna-roja-spritesheet.png" type="Texture" id=5]
[ext_resource path="res://assets/assets-prueba/computer_popup_spritesheet.png" type="Texture" id=6]
[ext_resource path="res://assets/gui/componente2.png" type="Texture" id=7]
[ext_resource path="res://GUI/header/VaccineComponents.gd" type="Script" id=8]

[node name="HeaderContainer" type="HBoxContainer"]
margin_right = 100.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bars" type="VBoxContainer" parent="."]
visible = false
margin_right = 500.0
margin_bottom = 200.0
alignment = 1

[node name="LifeBar" parent="Bars" instance=ExtResource( 1 )]
margin_top = 51.0
margin_bottom = 104.0

[node name="ProtectionBar" parent="Bars" instance=ExtResource( 2 )]
margin_top = 108.0
margin_bottom = 148.0

[node name="VaccineComponentsContainer" type="NinePatchRect" parent="."]
margin_right = 100.0
margin_bottom = 200.0
rect_min_size = Vector2( 100, 200 )
texture = ExtResource( 6 )
region_rect = Rect2( 191.695, -0.112061, 192.552, 64.6435 )

[node name="VaccineComponents" type="VBoxContainer" parent="VaccineComponentsContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -79.0
margin_right = 25.0
margin_bottom = 79.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComponentOneEmpty" type="NinePatchRect" parent="VaccineComponentsContainer/VaccineComponents"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 5 )
region_rect = Rect2( 245.63, -0.153376, 133.39, 134.69 )

[node name="ComponentOne" type="NinePatchRect" parent="VaccineComponentsContainer/VaccineComponents"]
visible = false
margin_top = 54.0
margin_right = 50.0
margin_bottom = 104.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 4 )

[node name="ComponentTwoEmpty" type="NinePatchRect" parent="VaccineComponentsContainer/VaccineComponents"]
margin_top = 54.0
margin_right = 50.0
margin_bottom = 104.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 5 )
region_rect = Rect2( 245.63, -0.153376, 133.39, 134.69 )

[node name="ComponentTwo" type="NinePatchRect" parent="VaccineComponentsContainer/VaccineComponents"]
visible = false
margin_top = 108.0
margin_right = 50.0
margin_bottom = 158.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComponentThreeEmpty" type="NinePatchRect" parent="VaccineComponentsContainer/VaccineComponents"]
margin_top = 108.0
margin_right = 50.0
margin_bottom = 158.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 5 )
region_rect = Rect2( 245.63, -0.153376, 133.39, 134.69 )

[node name="ComponentThree" type="NinePatchRect" parent="VaccineComponentsContainer/VaccineComponents"]
visible = false
margin_top = 162.0
margin_right = 50.0
margin_bottom = 212.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
